force-app/main/default/objects/Product2/fields/Active_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Active_Recipe__c</fullName>
    <label>Active Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipLabel>Products Using This Recipe</relationshipLabel>
    <relationshipName>Products_Using_Recipe</relationshipName>
    <type>Lookup</type>
</CustomField>