force-app/main/default/objects/Product2/fields/Days_Until_Stockout__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Stockout__c</fullName>
    <formula>IF(Current_Stock__c &gt; 0, Current_Stock__c / 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Stockout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>