force-app/main/default/objects/Product2/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>IF(Retail_Price__c &gt; 0, (Retail_Price__c - Cost__c) / Retail_Price__c, 0)</formula>
    <label>Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>