force-app/main/default/objects/Product2/fields/Primary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Primary Vendor)</relationshipLabel>
    <relationshipName>Products_Primary_Vendor</relationshipName>
    <type>Lookup</type>
</CustomField>