force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished_Good</fullName>
                <label>Finished Good</label>
            </value>
            <value>
                <fullName>Raw_Material</fullName>
                <label>Raw Material</label>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>