force-app/main/default/objects/Product2/fields/Reorder_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Needed__c</fullName>
    <formula>IF(
    Days_Until_Stockout__c &lt;= 
    (Primary_Vendor__r.Lead_Time_Days__c + Safety_Stock_Days__c),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder Needed</label>
    <type>Checkbox</type>
</CustomField>