force-app/main/default/objects/Product2/fields/Rolling_Avg_Daily_Usage__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Avg_Daily_Usage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Rolling Avg Daily Usage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>