force-app/main/default/objects/Product2/fields/Safety_Stock_Days__c.field-meta.xml
<CustomField>
    <fullName>Safety_Stock_Days__c</fullName>
    <label>Safety Stock Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>