force-app/main/default/objects/Product2/fields/Secondary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Secondary Vendor)</relationshipLabel>
    <relationshipName>Products_Secondary_Vendor</relationshipName>
    <type>Lookup</type>
</CustomField>