force-app/main/default/objects/Product2/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <displayFormat>SKU-{00000}</displayFormat>
    <label>SKU</label>
    <type>AutoNumber</type>
</CustomField>