force-app/main/default/objects/Product2/fields/Stock_Health__c.field-meta.xml
<CustomField>
    <fullName>Stock_Health__c</fullName>
    <formula>IF(Current_Stock__c &lt;= 0, "Stockout",
IF(Current_Stock__c &lt;= Reorder_Point__c * 0.5, "Critical",
IF(Current_Stock__c &lt;= Reorder_Point__c, "Low",
IF(Current_Stock__c &gt;= Reorder_Point__c * 3, "Overstock", "Healthy"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Health</label>
    <type>Text</type>
</CustomField>