force-app/main/default/objects/Product2/fields/Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type__c</fullName>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
            </value>
            <value>
                <fullName>Dry_Storage</fullName>
                <label>Dry Storage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>